--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <div class="card3d hide-on-small-only">
               <div class="front">
-                <img src="http//sicoders.github.io/img/perfil.jpg" alt="" srcset="">
+                <img src="img/perfil.jpg" alt="" srcset="">
               </div>
               <div class="back">
                  
@@ -115,7 +115,7 @@
         <div class="row">
         <div class="card col l3 s12 m6 small ">
           <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="http//sicoders.github.io/img/desenvolvimento.png">
+            <img class="activator" src="img/desenvolvimento.png">
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4">Desenvolvimento<i class="material-icons right">more_vert</i></span>
@@ -127,7 +127,7 @@
         </div>
         <div class="card col l3 s12 m6 small">
           <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="http//sicoders.github.io/img/manuten.jpg">
+            <img class="activator" src="img/manuten.jpg">
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4">Suporte para sua empresa<i class="material-icons right">more_vert</i></span>
@@ -140,7 +140,7 @@
         </div>
         <div class="card col l3 s12 m6 small">
           <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="http//sicoders.github.io/img/automação.jpg">
+            <img class="activator" src="img/automação.jpg">
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4">Automação<i class="material-icons right">more_vert</i></span>
@@ -152,7 +152,7 @@
         </div>
         <div class="card col l3 s12 m6 small">
           <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="http//sicoders.github.io/img/telefonia.jpg">
+            <img class="activator" src="img/telefonia.jpg">
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4">Telefonia<i class="material-icons right">more_vert</i></span>
@@ -177,9 +177,9 @@
             <div class="txem col l6 s12">
               <h5 class="white-text"></h5>
               <ul id="wt-em" class="col s2  ">
-                <li><img src="http//sicoders.github.io/svg/email.svg" alt="" srcset=""></li>
+                <li><img src="svg/email.svg" alt="" srcset=""></li>
               
-                <li><img src="http//sicoders.github.io/svg/whatsapp.svg " alt="" srcset=""></li>
+                <li><img src="svg/whatsapp.svg " alt="" srcset=""></li>
               </ul>
               <h2>marcosfsprivado@gmail.com</h2>
               <h2>(24)9-9249-5302</h2>
@@ -187,9 +187,9 @@
             <div class="col l4 offset-l2 s12">
               <h5 class="white-text"></h5>
               <ul id="social-icons">
-                <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/MarksOneRS"><img src="http/sicoders.github.io/svg/facebook.svg" alt="" srcset=""></a></li>
-                <li><a class="grey-text text-lighten-3" href="https://github.com/MarksPro"><img src="http/sicoders.github.io/svg/github.svg" alt="" srcset=""></a></li>
-                <li><a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/marcos-santos-620602bb/"><img src="http/sicoders.github.io/svg/lk.svg" alt="" srcset=""></a></li>
+                <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/MarksOneRS"><img src="svg/facebook.svg" alt="" srcset=""></a></li>
+                <li><a class="grey-text text-lighten-3" href="https://github.com/MarksPro"><img src="svg/github.svg" alt="" srcset=""></a></li>
+                <li><a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/marcos-santos-620602bb/"><img src="svg/lk.svg" alt="" srcset=""></a></li>
               </ul>
             </div>
           </div>
@@ -203,7 +203,7 @@
       </footer> 
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-      <script type="text/javascript" src="http//sicoders.github.io/js/materialize.min.js"></script>
+      <script type="text/javascript" src="js/materialize.min.js"></script>
       <script>
         $(document).ready(function() {
           $(".button-collapse").sideNav();
