--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         
         <div class="skewedBox orange">
             <div id="perfil-foto">
-                <img src="http//sicoders.github.io/img/perfilmob.png" width="100%" height="180fr" alt="">
+                <img src="img/perfilmob.png" width="100%" height="180fr" alt="">
             </div>
             <div class="card3d hide-on-small-only">
               <div class="front">
